# xaiinfra

./: CMakeLists.txt  loader.hpp  main.cpp  readme.md  tensor.hpp  transformer_block.hpp
